This is just to motivate myself to improve a little bit every day :)

Best: 32

20-03-2025
Streak: 1
    - Add component directory to presentation - for not-quite-screen level fragments and entities outside the nav graph
    - Reorganise directory structure
    - Following Tutorial: Add drawable resources for tutorial

17-03-2025
Streak: 2
    - Following Tutorial: Followed tutorial on requests state
    - Following Tutorial: Add basic layout to HomeScreen -> introduce material3 dependency
    - Following Tutorial: Add empty DisplayTasks fun + alert dialogue for deleting task

16-03-2025
Streak: 1
Did:
    - Store WIP state of menu buttons. Want to figure out proper state management first before implementing.
    - Rename function
    - Lazy refactor into presentation-domain-data structure -> moved everything that wasn't presentation into domain layer, as we have no real data yet.
    - Following Tutorial: Temporarily use voyager nav.
    - Following Tutorial: Add ToDoTask to data layer.
    - Got to end of section "Collection Setup" from the tutorial video, but should follow the video describing RequestState in more detail before continuing

12-12-2024
Streak: 1
Learned:
Did:
    - Reinvent the wheel and make a custom data class for maps that have a fixed order

10-12-2024
Streak: 2
Learned:
Did:
    - Add custom floating action buttons that do allow you to change alignment of content - based on existing compose fabs.
    - Make ChecklistSubMenu use the new fabs
    - Refactor SubTaskList to not unnecessarily go from immutable to mutable values, add skip icon.
    - Fix icon colours, fix cosmeticism icon size.

9-12-2024
Streak: 1
Learned:
Did:
    - Rename ChecklistButton, MainTaskButton and SubTaskButton to make their function & relations clearer.
    - Make MainTaskButton use Strings instead of StringResources (necessary if we want user input customisation).