@@ -1,4 +1,23 @@
-package presentation.components
+package presentation.components.tutorial
 
-class LoadingScreen {
+import androidx.compose.foundation.layout.Box
+import androidx.compose.foundation.layout.fillMaxSize
+import androidx.compose.foundation.layout.padding
+import androidx.compose.foundation.layout.size
+import androidx.compose.material3.CircularProgressIndicator
+import androidx.compose.runtime.Composable
+import androidx.compose.ui.Alignment
+import androidx.compose.ui.Modifier
+import androidx.compose.ui.unit.dp
+
+@Composable
+fun LoadingScreen() {
+    Box(
+        modifier = Modifier
+            .fillMaxSize()
+            .padding(all = 24.dp),
+        contentAlignment = Alignment.Center
+    ){
+        CircularProgressIndicator(modifier = Modifier.size(28.dp))
+    }
 }
